# aterm

./: ChangeLog  ChangeLog.0.4  INSTALL  Makefile.in  README.configure  aterm.lsm  configure  index.html  params.json
autoconf/: Make.common.in  aclocal.m4  config.h.in  configure.in
doc/: ChangeLog.rxvt  FAQ  Makefile.in  README.Unix98PTY  README.thai  ReleaseGuide  aterm.1
scripts/: random_colors.in  slidshow
src/: Makefile.in  command.c  empty.c  feature.h  graphics.c  grkelot.c  grkelot.h  libafterstep.h  main.c  makeprotos-sed  menubar.c  misc.c  netdisp.c  pixmap.c  protos.h  rmemset.c  rxvt.h  rxvtgrx.h  screen.c  screen.h  scrollbar.c  thai.c  thai.h  utmp.c  xdefaults.c
src/graphics/: Makefile.in  grxlib.c  grxlib.h
tools/: cvs2cl.as.pl
